[gd_scene load_steps=2 format=3 uid="uid://fqxleeur8mc2"]

[ext_resource type="Script" path="res://addons/weekendspreadsheet/Scripts/GoogleSheetManager.gd" id="1_54o33"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_54o33")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Settings"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 344.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings/MarginContainer"]
layout_mode = 2

[node name="Sheet ID" type="HBoxContainer" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/MarginContainer/VBoxContainer/Sheet ID"]
layout_mode = 2
text = "ID:"

[node name="Spacer" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer/Sheet ID"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="ID LineEdit" type="LineEdit" parent="TabContainer/Settings/MarginContainer/VBoxContainer/Sheet ID"]
custom_minimum_size = Vector2(1030, 2.08165e-12)
layout_mode = 2
tooltip_text = "The ID of the Spreadsheet, this is in the URL of the spreadsheet and contains only Alpha Numeric Characters and Underscores."
text = "1ThhCN1OdbKDaUJCrCnnJLNKMyMlpetQwEeE_T4RnlgU"
placeholder_text = "Sheet ID"

[node name="Folder Name" type="HBoxContainer" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/MarginContainer/VBoxContainer/Folder Name"]
layout_mode = 2
text = "Data Folder:"

[node name="Spacer" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer/Folder Name"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="Folder LineEdit" type="LineEdit" parent="TabContainer/Settings/MarginContainer/VBoxContainer/Folder Name"]
custom_minimum_size = Vector2(922.16, 2.08165e-12)
layout_mode = 2
tooltip_text = "The folder the data will be saved in."
text = "Data"
placeholder_text = "Data Name"

[node name="Spacer2" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer/Folder Name"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Error Text" type="Label" parent="TabContainer/Settings/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.00784314, 0, 1)

[node name="Success Text" type="Label" parent="TabContainer/Settings/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.52549, 0.337255, 1)

[node name="Spacer" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 30.56)
layout_mode = 2

[node name="Add New Sheet Button" type="Button" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 32.24)
layout_mode = 2
text = "Add Sheet"

[node name="New Sheet Settings" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 119.55)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sheet GID" type="HBoxContainer" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Sheet GID"]
layout_mode = 2
text = "GID:"

[node name="Spacer" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Sheet GID"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="GID LineEdit" type="LineEdit" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Sheet GID"]
custom_minimum_size = Vector2(298.54, 2.08165e-12)
layout_mode = 2
tooltip_text = "The GID of the spreadsheet page, this is the last number in the URL after \"gid=...\"
The first page will always be 'gid=0'"
placeholder_text = "Sheet GID"

[node name="Spacer2" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Sheet GID"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="Add Sheet Button" type="Button" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Sheet GID"]
custom_minimum_size = Vector2(120.42, 2.08165e-12)
layout_mode = 2
theme_override_constants/h_separation = 2450
text = "Add Sheet
"

[node name="Data Name" type="HBoxContainer" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Data Name"]
layout_mode = 2
text = "Name:"

[node name="Spacer" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Data Name"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="Data LineEdit" type="LineEdit" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Data Name"]
custom_minimum_size = Vector2(281.58, 2.08165e-12)
layout_mode = 2
tooltip_text = "The name of the file that will be created with this data"
placeholder_text = "Data Name"

[node name="Spacer2" type="Control" parent="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Data Name"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Are you sure?"
initial_position = 4
size = Vector2i(500, 200)

[node name="Label" type="Label" parent="ConfirmationDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 151.0
text = "Are you sure you want to delete this page? 
You can not undo this action."

[connection signal="text_changed" from="TabContainer/Settings/MarginContainer/VBoxContainer/Sheet ID/ID LineEdit" to="." method="_on_id_line_edit_text_changed"]
[connection signal="text_changed" from="TabContainer/Settings/MarginContainer/VBoxContainer/Folder Name/Folder LineEdit" to="." method="_on_folder_line_edit_text_changed"]
[connection signal="pressed" from="TabContainer/Settings/MarginContainer/VBoxContainer/Add New Sheet Button" to="." method="_on_add_new_sheet_button_pressed"]
[connection signal="pressed" from="TabContainer/Settings/MarginContainer/VBoxContainer/New Sheet Settings/VBoxContainer/Sheet GID/Add Sheet Button" to="." method="_on_add_sheet_button_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
